fix: keep footer visible on short pages

--- a/client/src/layouts/AdminLayout/AdminLayout.module.scss
+++ b/client/src/layouts/AdminLayout/AdminLayout.module.scss
@@ -1,7 +1,14 @@
 @use "../../styles/visitor-mixins" as ui;
 
+.adminLayout {
+  min-height: 100dvh;
+  display: flex;
+  flex-direction: column;
+}
+
 .adminSection {
-  min-height: calc(100vh - 160px);
+  flex: 1 0 auto;
+  min-height: 0;
   padding: 2rem 1rem 3.4rem;
   background-image: linear-gradient(rgba(31, 29, 30, 0.9), rgba(31, 29, 30, 0.9)), url('/img/rocky-wall.png');
   background-size: cover;
