--- a/client/src/pages/MemberRecipes/MemberRecipes.module.scss
+++ b/client/src/pages/MemberRecipes/MemberRecipes.module.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   padding: 1.2rem 0.85rem 2rem;
-  min-height: 100vh;
+  min-height: 100%;
   background-image: linear-gradient(rgba(31, 29, 30, 0.9), rgba(31, 29, 30, 0.9)), url('/img/rocky-wall.png');
   background-size: cover;
   background-position: center;
